Fix spacing in files and change styling of app header font.

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ code {
 /* app header styling */
 .app-header {
   text-align: center;
+  font-size: 1.5rem;
+}
+
+#main-heading {
+  font-size: 3rem;
 }
 
 /* container styling */
